# thermal-imaging-camera

./: .gitmodules  CMakeLists.txt  MLX90640_PICO_I2C_Driver.cpp  README.md  SSD1351_API.cpp  SSD1351_API.h  SSD1351_PICO_SPI_Driver.cpp  SSD1351_SPI_DRIVER.h  main.cpp
